[client] fix css - changing start by flex-start

--- a/packages/client/src/styles/_layout.scss
+++ b/packages/client/src/styles/_layout.scss
@@ -30,7 +30,7 @@
         color: $gray-800;
         width: 100%;
         display: flex;
-        justify-content: start;
+        justify-content: flex-start;
         align-items: center;
 
         svg {
