--- a/packages/client/src/styles/_layout.scss
+++ b/packages/client/src/styles/_layout.scss
@@ -11,43 +11,15 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+
+      .heading {
+        margin: 0 1em;
+        h1 {
+          font-size: 1em;
+        }
+      }
     }
 
-    nav.sidebar {
-      position: sticky;
-      top: $header-height;
-      height: calc(100vh - #{$header-height});
-      display: flex;
-      flex-direction: column;
-
-      .sidebar-heading {
-        svg {
-          float: right;
-        }
-      }
-
-      .nav-link {
-        color: $gray-800;
-        width: 100%;
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-
-        svg {
-          color: $gray-600;
-          margin-right: $spacer/4;
-        }
-
-        &:hover {
-          color: $black;
-          background-color: $gray-300;
-        }
-      }
-      footer {
-        font-size: 0.8em;
-        color: $gray-600;
-      }
-    }
     main {
       flex-grow: 1;
 
@@ -59,6 +31,7 @@
     }
     footer {
       flex-grow: 0;
+      z-index: 1001;
     }
   }
 }
