--- a/packages/client/src/styles/_leaflet.scss
+++ b/packages/client/src/styles/_leaflet.scss
@@ -2,8 +2,8 @@
 
 .leaflet-container {
   display: flex;
-  min-height: 100%;
+  height: 100%;
   width: 100%;
   background-color: transparent;
-  min-height: 500px;
+  min-height: 300px;
 }
