--- a/packages/client/src/styles/_map.scss
+++ b/packages/client/src/styles/_map.scss
@@ -2,3 +2,9 @@
   position: relative;
   z-index: 1001;
 }
+.map-point-data {
+  position: absolute;
+  bottom: 0;
+  left:0;
+  background-color: rgba(255,255,255,0.8);
+}
