--- a/packages/client/src/styles/_map.scss
+++ b/packages/client/src/styles/_map.scss
@@ -7,4 +7,16 @@
   bottom: 0;
   left:0;
   background-color: rgba(255,255,255,0.8);
+  display: flex;
+
+  .map-feature-viz {
+    
+    max-width:50%;
+    display: flex;
+    flex-direction: column;
+    .acoustics,.emotions {
+      display: flex;
+      flex-direction: column;
+    }
+  }
 }
