--- a/packages/client/src/styles/_map.scss
+++ b/packages/client/src/styles/_map.scss
@@ -5,48 +5,108 @@
 .map-point-data {
   position: absolute;
   bottom: 0;
-  left:0;
-  background-color: rgba(255,255,255,0.8);
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.8);
   display: flex;
 
   .map-feature-viz {
-    
-    max-width:50%;
+    max-width: 50%;
     display: flex;
     // todo media query to go column in small width screen
-    .acoustics,.emotions {
-      display: flex;
-      flex-direction: column;
-      
-      .acoustic-circles{
-        width: 100px;
-        height: 100px;
-        position: relative;
 
-        .acoustic-birds, .acoustic-voices , .acoustic-trafic {
-          position: absolute;
-          display:flex;
-          justify-content: center;
-          align-items: center;
-          .icon {
-            color: white;
-          }
+    .acoustic-circles {
+      width: 100px;
+      height: 100px;
+      position: relative;
+
+      .acoustic-birds,
+      .acoustic-voices,
+      .acoustic-trafic {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .icon {
+          color: white;
         }
-          .acoustic-birds{
-          top: 0;
-          left: 0;
+      }
+      .acoustic-birds {
+        top: 0;
+        left: 0;
+      }
+      .acoustic-voices {
+        top: 0;
+        right: 0;
+      }
+      .acoustic-trafic {
+        bottom: 0;
+        margin: 0 auto;
+        left: 0;
+        right: 0;
+      }
+    }
+
+    .emotions-scatter-plot {
+      position: relative;
+      width: 100px;
+      height: 100px;
+
+      // doubel background-gradient taken from https://stackoverflow.com/a/60211962
+      .background,
+      .background_before {
+        z-index: 0;
+        position: absolute;
+        left: 10px;
+        height: 90px;
+        width: 90px;
+      }
+      .background_before {
+        content: "";
+        display: block;
+        -webkit-mask: linear-gradient(to bottom, #0000, #000);
+        mask: linear-gradient(to bottom, #0000, #000);
+      }
+      .point {
+        z-index: 1;
+        position: absolute;
+        width: 10px;
+        height: 10px;
+        border: 2px solid black;
+      }
+      .x-axe {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        border-top: 1px solid black;
+        width: 100%;
+        height: 10px;
+        display: flex;
+        justify-content: end;
+        label {
+          font-size: 0.8rem;
         }
-        .acoustic-voices {
-        
-          top: 0;
-          right: 0;
+      }
+      .y-axe {
+        position: absolute;
+        left: 0;
+        top: 0;
+        border-right: 1px solid black;
+        width: 10px;
+        height: 100%;
+        display: flex;
+        justify-content: end;
+        label {
+          font-size: 0.8rem;
+          writing-mode: vertical-rl;
+          text-orientation: mixed;
         }
-        .acoustic-trafic {
-          bottom: 0;
-          margin: 0 auto;
-          left:0;
-          right: 0;
-        }
+      }
+      .zero {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        font-size: 0.7rem;
+        line-height: 0.5rem;
       }
     }
   }
