[Client] emotion scatter plot revised

--- a/packages/client/src/styles/_map.scss
+++ b/packages/client/src/styles/_map.scss
@@ -48,65 +48,67 @@
 
     .emotions-scatter-plot {
       position: relative;
-      width: 100px;
-      height: 100px;
 
-      // doubel background-gradient taken from https://stackoverflow.com/a/60211962
-      .background,
-      .background_before {
-        z-index: 0;
-        position: absolute;
-        left: 10px;
-        height: 90px;
-        width: 90px;
-      }
-      .background_before {
-        content: "";
-        display: block;
-        -webkit-mask: linear-gradient(to bottom, #0000, #000);
-        mask: linear-gradient(to bottom, #0000, #000);
-      }
-      .point {
-        z-index: 1;
-        position: absolute;
-        width: 10px;
-        height: 10px;
-        border: 2px solid black;
-      }
-      .x-axe {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        border-top: 1px solid black;
-        width: 100%;
-        height: 10px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      .scatter-plot-row {
         display: flex;
-        justify-content: end;
-        label {
-          font-size: 0.8rem;
+        align-items: center;
+      }
+      .scatter-plot {
+        flex-grow: 0;
+        flex-shrink: 0;
+        position: relative;
+        width: 100px;
+        height: 100px;
+
+        .point {
+          z-index: 1;
+          position: absolute;
+          width: 10px;
+          height: 10px;
+          border-radius: 50%;
+          border: 2px solid black;
+        }
+        .x-axe {
+          position: absolute;
+          bottom: 50%;
+          left: 0;
+          border-top: 1px dashed black;
+          width: 100%;
+          height: 0px;
+          display: flex;
+          justify-content: end;
+          label {
+            font-size: 0.8rem;
+          }
+        }
+        .y-axe {
+          position: absolute;
+          left: 50%;
+          top: 0;
+          border-right: 1px dashed black;
+          width: 0px;
+          height: 100%;
+          display: flex;
+          justify-content: end;
         }
       }
-      .y-axe {
-        position: absolute;
-        left: 0;
-        top: 0;
-        border-right: 1px solid black;
-        width: 10px;
-        height: 100%;
-        display: flex;
-        justify-content: end;
-        label {
-          font-size: 0.8rem;
+      label {
+        font-size: 0.8rem;
+        &.min-x-label,
+        &.max-x-label {
           writing-mode: vertical-rl;
           text-orientation: mixed;
+          top: 0;
         }
-      }
-      .zero {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        font-size: 0.7rem;
-        line-height: 0.5rem;
+        &.min-x-label {
+          left: 0;
+        }
+        &.max-x-label {
+          right: 0;
+        }
       }
     }
   }
