[Client] feature data panel refinement - general layout - acoustic-level added - colors in emotions scatterplot - selected time indicator in timeline

--- a/packages/client/src/styles/_map.scss
+++ b/packages/client/src/styles/_map.scss
@@ -2,27 +2,50 @@
   position: relative;
   z-index: 1001;
 }
+
 .map-point-data {
   position: absolute;
   bottom: 0;
+  max-height: 50%;
+  overflow-y: auto;
   left: 0;
-  width: fit-content;
-  background-color: rgba(255, 255, 255, 0.8);
+  //width: fit-content;
+  background-color: rgba(255, 255, 255, 0.9);
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   //width: 100%;
 
-  // todo media query to go column in small width screen
+  padding: 1rem;
+  > * {
+    margin-right: 0.7rem;
+    margin-bottom: 0.7rem;
+  }
+  > *:last-child {
+    margin: 0;
+  }
+  h6 {
+    margin-bottom: 0.5rem;
+    font-weight: 600;
+  }
 
+  .close {
+    padding: 0.1rem;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+  // .acoustic-panel {
+  //   width: min-content;
+  // }
   .acoustic-circles {
-    width: 100px;
-    height: 100px;
-    position: relative;
+    display: flex;
+    flex-wrap: wrap;
 
-    .acoustic-birds,
-    .acoustic-voices,
-    .acoustic-trafic {
-      position: absolute;
+    .acoustic-circle {
+      width: 45px;
+      height: 45px;
+      border-radius: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -30,28 +53,19 @@
         color: white;
       }
     }
-    .acoustic-birds {
-      top: 0;
-      left: 0;
-    }
-    .acoustic-voices {
-      top: 0;
-      right: 0;
-    }
-    .acoustic-trafic {
-      bottom: 0;
-      margin: 0 auto;
-      left: 0;
-      right: 0;
-    }
   }
 
   .emotions-scatter-plot {
-    padding: 1rem;
-    flex-shrink: 0;
-    flex-grow: 1;
+    min-width: fit-content;
     display: flex;
+    justify-content: center;
     align-items: center;
+    // hack vertical line margin issue
+    margin: 0 0.8rem;
+    &.empty {
+      opacity: 0.4;
+    }
+
     .scatter-plot-row {
       display: flex;
       align-items: center;
@@ -76,28 +90,37 @@
         position: absolute;
         bottom: 50%;
         left: 0;
-        border-top: 1px dashed black;
+        //border-top: 1px dashed black;
         width: 100%;
-        height: 0px;
+        height: 5px;
         display: flex;
-        justify-content: end;
-        label {
-          font-size: 0.8rem;
+        justify-content: start;
+        > * {
+          width: 1px;
+          height: 100%;
         }
       }
       .y-axe {
         position: absolute;
         left: 50%;
         top: 0;
-        border-right: 1px dashed black;
-        width: 0px;
+        //border-right: 1px dashed black;
+        width: 5px;
         height: 100%;
         display: flex;
-        justify-content: end;
+        flex-direction: column-reverse;
+        justify-content: start;
+        > * {
+          height: 1px;
+          width: 100%;
+        }
       }
     }
     label {
+      display: block;
       font-size: 0.8rem;
+      // hack vertical line margin issue
+      line-height: 0.8rem;
       &.min-x-label,
       &.max-x-label {
         writing-mode: vertical-rl;
@@ -105,4 +128,10 @@
       }
     }
   }
+}
+
+// left map align data panle on the right
+.map-point-data.is-left {
+  right: 0;
+  left: unset !important;
 }
