--- a/packages/client/src/styles/index.scss
+++ b/packages/client/src/styles/index.scss
@@ -44,6 +44,7 @@
 @import "~bootstrap/scss/utilities/api";
 
 // Custom
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap");
 @import "./layout";
 @import "./loader";
 @import "./maplibre";
