--- a/packages/client/src/styles/_variables.scss
+++ b/packages/client/src/styles/_variables.scss
@@ -1,2 +1,6 @@
 $header-height: 50px;
-$font-family-sans-serif: "Quicksand", "public sans", "sans-serif" !default;
+$font-family-sans-serif: "Quicksand", "public sans", "sans-serif";
+$primary: #f5edd6;
+$accordion-button-active-bg: $primary;
+$accordion-button-active-color: black;
+$accordion-button-bg: $primary;
