--- a/packages/client/src/styles/index.scss
+++ b/packages/client/src/styles/index.scss
@@ -1,7 +1,9 @@
 // Configuration
 @import "~bootstrap/scss/functions";
+
+@import "./variables";
 @import "~bootstrap/scss/variables";
-@import "variables";
+@import "./post_variables";
 @import "~bootstrap/scss/maps";
 @import "~bootstrap/scss/mixins";
 @import "~bootstrap/scss/utilities";
