--- a/packages/client/src/styles/_map.scss
+++ b/packages/client/src/styles/_map.scss
@@ -46,11 +46,12 @@
       width: 45px;
       height: 45px;
       border-radius: 100%;
+      border: 3px solid #ddd;
       display: flex;
       justify-content: center;
       align-items: center;
       .icon {
-        color: white;
+        color: #ddd;
       }
     }
   }
@@ -90,29 +91,60 @@
         position: absolute;
         bottom: 50%;
         left: 0;
-        //border-top: 1px dashed black;
         width: 100%;
-        height: 5px;
         display: flex;
         justify-content: start;
-        > * {
-          width: 1px;
-          height: 100%;
+        align-items: center;
+        > .axis {
+          width:1px;
+          height: 0;;
+          border-style: solid;
+          border-left-width:0;
+          border-right-width: 0;
+          border-top-width: 2px;
+          border-bottom-width: 2px;
+        }
+
+        .arrow:first-of-type {
+          border-top: 5px solid transparent;
+          border-bottom: 5px solid transparent;
+          border-right: 5px solid #ddd;
+        }
+
+        .arrow:last-of-type {
+          border-top: 5px solid transparent;
+          border-bottom: 5px solid transparent;
+          border-left: 5px solid #ddd;
         }
       }
       .y-axe {
         position: absolute;
         left: 50%;
         top: 0;
-        //border-right: 1px dashed black;
-        width: 5px;
         height: 100%;
         display: flex;
         flex-direction: column-reverse;
         justify-content: start;
-        > * {
-          height: 1px;
-          width: 100%;
+        align-items: center;
+        > .axis {
+            width: 0;
+            height: 1px;
+            border-style: solid;
+            border-left-width:2px;
+            border-right-width: 2px;
+            border-top-width:0;
+            border-bottom-width: 0;
+          }
+
+        .arrow:first-of-type {
+          border-left: 5px solid transparent;
+          border-right: 5px solid transparent;
+          border-top: 5px solid #ddd;
+        }
+        .arrow:last-of-type {
+          border-left: 5px solid transparent;
+          border-right: 5px solid transparent;
+          border-bottom: 5px solid #ddd;
         }
       }
     }
@@ -134,4 +166,9 @@
 .map-point-data.is-left {
   right: 0;
   left: unset !important;
+}
+
+.arrow {
+  width: 0;
+  height: 0;
 }
