--- a/packages/client/src/styles/_map.scss
+++ b/packages/client/src/styles/_map.scss
@@ -46,12 +46,12 @@
       width: 45px;
       height: 45px;
       border-radius: 100%;
-      border: 3px solid #ddd;
+      border: 3px solid $lasso-gray;
       display: flex;
       justify-content: center;
       align-items: center;
       .icon {
-        color: #ddd;
+        color: $lasso-gray;
       }
     }
   }
@@ -100,13 +100,13 @@
         .arrow:first-of-type {
           border-top: 5px solid transparent;
           border-bottom: 5px solid transparent;
-          border-right: 5px solid #ddd;
+          border-right: 5px solid $lasso-gray;
         }
 
         .arrow:last-of-type {
           border-top: 5px solid transparent;
           border-bottom: 5px solid transparent;
-          border-left: 5px solid #ddd;
+          border-left: 5px solid $lasso-gray;
         }
       }
       .y-axe {
@@ -131,12 +131,12 @@
         .arrow:first-of-type {
           border-left: 5px solid transparent;
           border-right: 5px solid transparent;
-          border-top: 5px solid #ddd;
+          border-top: 5px solid $lasso-gray;
         }
         .arrow:last-of-type {
           border-left: 5px solid transparent;
           border-right: 5px solid transparent;
-          border-bottom: 5px solid #ddd;
+          border-bottom: 5px solid $lasso-gray;
         }
       }
     }
