--- a/packages/client/src/styles/_map.scss
+++ b/packages/client/src/styles/_map.scss
@@ -6,9 +6,10 @@
 .map-point-data {
   position: absolute;
   bottom: 0;
-  height: 50%;
+  max-height: 50%;
   left: 0;
   background-color: rgba(255, 255, 255, 0.9);
+  display: flex;
 
   &.is-left {
     right: 0;
