[client] more flexible timeseries specification #9

--- a/packages/client/src/styles/_map.scss
+++ b/packages/client/src/styles/_map.scss
@@ -27,7 +27,7 @@
     padding: 2em 1em 0 1em;
     max-height: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
     overflow-y: auto;
 
