[client] same gray color for donut, gauges & axis
Fix #36

--- a/packages/client/src/styles/_post_variables.scss
+++ b/packages/client/src/styles/_post_variables.scss
@@ -1,6 +1,6 @@
 $link-color: black;
-$lasso-gray: $gray-500;
+$lasso-gray: #ccc;
 
 :root {
-   --lasso-gray: #{$lasso-gray}; 
+  --lasso-gray: #{$lasso-gray};
 }
